Refactor sbt plugins: rename, zero-config, unified versioning, auto dependency
Plugin renames:
- JvmReleases → SgeDesktopJvmPlatform
- BrowserReleases → SgeBrowserPlatform
- NativeReleases → SgeDesktopNativePlatform
- AndroidReleases → SgeAndroidPlatform

Key separation:
- sgeRustLibDir removed, replaced by sgeNativeLibLocalDir (Option[File])
  and sgeNativeLibDir (resolved from local override or JAR extraction)
- sgeProjectDir removed — uses projectMatrixBaseDirectory from
  sbt-projectmatrix (always resolves correctly for all axis subprojects)
- sgeAppName default moved to SgeProject.projectSettings

Zero-config axis settings:
- SgeProject.jvmAxis, .jsAxis, .nativeAxis — no arguments needed
- All settings derived from SgeProject keys + projectMatrixBaseDirectory
- Demos simplified: single ThisBuild/sgeNativeLibLocalDir, no per-axis
  overrides, shared project uses SgeProject.nativeAxis directly

Unified versioning:
- sge-build version matches SGE library version (reads from .sge-version)
- SgePlugin.sgeVersion exposes version at runtime from plugin JAR
  properties file (generated by resource generator in sge-build/build.sbt)
- demos/project/build.sbt reads .sge-version for plugin version
- writeDemoVersion writes .sge-version at both repo root and demos/

Auto SGE library dependency:
- SgeDesktopJvmPlatform adds sge_${scalaBinaryVersion} to libraryDependencies
- SgeBrowserPlatform adds sge_sjs1_${scalaBinaryVersion}
- SgeDesktopNativePlatform adds sge_native0.5_${scalaBinaryVersion}
- No manual libraryDependencies += "com.kubuszok" %%% "sge" needed

Dev mode removed:
- demos always consume published sge-build plugin via addSbtPlugin
- SGE_USE_PLUGIN env var removed from CI and build files
- demos/project/plugins.sbt: transitive deps from sge-build, no explicit
  sbt-projectmatrix/sbt-scalajs/sbt-scala-native additions needed
- Developers run `sbt publishLocal` in sge-build/ after plugin changes

Native lib resolution fix:
- SgeDesktopNativePlatform reads sgeNativ